<resources>
    <string name="app_name">Livewords</string>
    <string name="error_permission_denied_message">Cannot access camera! Please grant permission in order to begin translation</string>
    <string name="enable">Enable</string>
    <string name="later">Later</string>
    <string name="story_set_attribution"><a href="https://storyset.com/">Illustration by Storyset</a>
</string>
    <string name="welcome_message">Welcome to Livewords.</string>
    <string name="permission_message">To fully benefit from the app we invite you to enable camera access.</string>
    <string name="content_desc_translation_api_attribution">Powered by Google Translate</string>
    <string name="label_source_language">Source language</string>
    <string name="center_text_label">Center text in box</string>
    <string name="model_downloading_message">…</string>
    <string name="model_downloaded_succes_message">Translation model downloaded successfully.</string>
    <string name="model_downloading_error_message">Error downloading translation.</string>
    <string name="translation_error_message">Error translating, please try aiming at your text.</string>
</resources>