<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/action_enable_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/welcome_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_size_normal"
                    android:layout_marginTop="@dimen/space_size_medium"
                    android:layout_marginEnd="@dimen/space_size_normal"
                    android:text="@string/welcome_message"
                    android:textSize="@dimen/text_size_xlarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/permission_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_size_normal"
                    android:layout_marginTop="@dimen/space_size_normal"
                    android:layout_marginEnd="@dimen/space_size_normal"
                    android:text="@string/permission_message"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome_message" />

                <ImageView
                    android:id="@+id/splash_illustration"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/space_size_normal"
                    android:layout_marginStart="@dimen/space_size_normal"
                    android:layout_marginTop="@dimen/space_size_medium"
                    android:contentDescription="@null"
                    android:src="@drawable/splash_illustration"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permission_message" />

                <TextView
                    android:id="@+id/attribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_set_attribution"
                    android:textSize="@dimen/text_size_xsmall"
                    app:layout_constraintBottom_toBottomOf="@id/splash_illustration"
                    app:layout_constraintEnd_toEndOf="@id/splash_illustration" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_enable_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_size_normal"
            android:layout_marginEnd="@dimen/space_size_normal"
            android:layout_marginBottom="@dimen/space_size_small"
            android:paddingVertical="@dimen/space_size_normal"
            android:text="@string/enable"
            app:layout_constraintBottom_toTopOf="@id/action_later_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_later_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_size_normal"
            android:layout_marginEnd="@dimen/space_size_normal"
            android:layout_marginBottom="@dimen/space_size_normal"
            android:paddingVertical="@dimen/space_size_normal"
            android:text="@string/later"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>